Added compression logic using deflater class